changed CMS red headers to orange; fixed paragraph spacing in notifications box

--- a/code/style/home.css
+++ b/code/style/home.css
@@ -616,6 +616,10 @@ body#home #gTrafficLight {
 	background: #fff2b7 url('/graphics/icon-home-alert.png') no-repeat 11px 11px;
 }
 
+.notifications p {
+	margin-top: 0px;
+}
+
 body#home #gTrafficLight {
 	background-position: 16px 10px;
 	background-repeat: no-repeat;
