--- a/code/style/style.css
+++ b/code/style/style.css
@@ -96,7 +96,7 @@
 }
 
 .headerimagelinks {
-	border-right: solid #CC3300 3px;
+	border-right: solid #FB9635 3px;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -136,14 +136,14 @@ li.preview {
 	/* desc: used to make the background colors of the title bars*/
 	border-top: solid white 2px;
 	border-bottom: solid white 2px;
-	background-color: #CC3300;
+	background-color: #FB9635;
 }
 
 a.titletext,  a.titletext:visited, a.titletext:hover {
 	/* tags: td*/
 	/* desc: used to make non-admin text appear in the left nav*/
 	font-family:    Verdana, Arial;
-	color: #CC3300;
+	color: #FB9635;
 	text-decoration: none; 
 	font-size: 10pt;
 	font-weight: bold;
@@ -199,7 +199,7 @@ a.titletext,  a.titletext:visited, a.titletext:hover {
 }
 
 .courseleftnav {
-	background-color: #CC3300;
+	background-color: #FB9635;
 }
 
 ul.adminLeftNavList { margin: 0 0 0 12px; padding: 0; list-style-type: none; }
@@ -208,7 +208,7 @@ ul.adminLeftNavList { margin: 0 0 0 12px; padding: 0; list-style-type: none; }
     working in normal browsers. */
 ul.adminLeftNavList li { margin: 0; padding: 0; font-size: 14px; line-height: 20px; display: inline; }
 
-hr.redBar { color:#CC3300; background-color:#CC3300; border: 0; width:100%; height:5px; }
+hr.redBar { color:#FB9635; background-color:#FB9635; border: 0; width:100%; height:5px; }
 
 div#nav_bar {
       margin: 6px;
@@ -329,7 +329,7 @@ a.folder {
 a.navsm { 
 	/* desc: used to make nav links*/
 	font-family:    Verdana, Arial;
-	color: #CC3300;
+	color: #FB9635;
 	text-decoration: none; 
 	font-size: 10px;
 	font-weight: bold;
@@ -338,7 +338,7 @@ a.navsm {
 
 a.navsm:link, a.navsm:visited { 
 	font-family:  Verdana, Arial;
-	color: #CC3300;
+	color: #FB9635;
 	text-decoration: none; 
 	font-size: 10px;
 	font-weight: bold;
@@ -346,7 +346,7 @@ a.navsm:link, a.navsm:visited {
 
 a.navsm:hover { 
 	font-family:  Verdana, Arial;
-	color: #CC3300;
+	color: #FB9635;
 	text-decoration: underline; 
 	font-size: 10px;	
 	font-weight: bold;
@@ -354,7 +354,7 @@ a.navsm:hover {
 
 a.navsm:active { 
 	font-family:  Verdana, Arial;
-	color: #CC3300;
+	color: #FB9635;
 	text-decoration: underline; 
 	font-size: 10px;
 	font-weight: bold;
@@ -430,7 +430,7 @@ select, option {
         padding: 1px; /* a bit of breathing room*/
         font-size: 8pt;
         color: #FFFFFF;/*Text*/
-        background-color: #CC3300;/* Background-color*/
+        background-color: #FB9635;/* Background-color*/
         border: solid 1px #CC0000;/* Border-color*/
 }
 
@@ -967,7 +967,7 @@ tr.blueHeaderBar, h3.gBlueHeaderBar, h3.gBlueHdrBar {
 	background-color : #517AA3;
 }
 tr.redHeaderBar, h3.gRedHeaderBar, h3.gRedHdrBar {
-	background-color : #cc3300;
+	background-color : #FB9635;
 }
 h3.gGrayHeaderBar, h3.gGrayHdrBar {
 	background-color: #666666;
